Bug 77884 - crash in mieqMoveToNewScreen with xorg 1.15.1 when vt switching with while hammering on the touchpad
Summary: crash in mieqMoveToNewScreen with xorg 1.15.1 when vt switching with while ha...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Input/Core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-24 10:10 UTC by Maarten Lankhorst
Modified: 2015-07-07 09:38 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-mi-don-t-process-events-from-disabled-devices-77884.patch (2.51 KB, patch)
2014-05-20 04:28 UTC, Peter Hutterer
no flags Details | Splinter Review

Description Maarten Lankhorst 2014-04-24 10:10:20 UTC
To reproduce:
- Run xorg-server in valgrind to slow it down enough.
- Hammer on the touchpad like a madman.
- ssh in and chvt away while hammering.
- Observe the following crash in X.org:

[  2444.985] (EE) BUG: triggered 'if (!dev->spriteInfo->sprite)'
[  2444.987] (EE) BUG: ../../mi/mieq.c:497 in mieqMoveToNewScreen()
[  2444.989] (EE)
[  2444.991] (EE) Backtrace:
[  2445.012] (EE) 0: /usr/bin/Xorg (mieqProcessDeviceEvent+0x114) [0x2932b4]
[  2445.019] (EE) 1: /usr/bin/Xorg (mieqProcessInputEvents+0xf7) [0x293447]
[  2445.027] (EE) 2: /usr/bin/Xorg (ProcessInputEvents+0x9) [0x19b159]
[  2445.037] (EE) 3: /usr/bin/Xorg (xf86VTSwitch+0x365) [0x19ba75]
[  2445.046] (EE) 4: /usr/bin/Xorg (WakeupHandler+0x6d) [0x1625ad]
[  2445.056] (EE) 5: /usr/bin/Xorg (WaitForSomething+0x1bf) [0x2ae48f]
[  2445.065] (EE) 6: /usr/bin/Xorg (SendErrorToClient+0xe1) [0x15d9d1]
[  2445.073] (EE) 7: /usr/bin/Xorg (remove_fs_handlers+0x40a) [0x161afa]
[  2445.079] (EE) 8: /lib/x86_64-linux-gnu/libc.so.6 (__libc_start_main+0xf5) [0x6f6dec5]
[  2445.088] (EE) 9: /usr/bin/Xorg (_start+0x29) [0x14cfee]
[  2445.093] (EE) 10: ? (?+0x29) [0x29]
[  2445.094] (EE)
Comment 1 Peter Hutterer 2014-05-20 04:28:27 UTC
Created attachment 99376 [details] [review]
0001-mi-don-t-process-events-from-disabled-devices-77884.patch
Comment 2 Timo Aaltonen 2015-07-07 09:38:00 UTC
seems this patch is in 1.17 at least, and seems to be working.. so closing


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.